# airegulationmap

./: .env.example  .gitignore  .impeccable.md  CLAUDE.md  CNAME  README.md  eslint.config.js  history.json  index.html  map.js  package-lock.json  package.json  playwright.config.ts  pyproject.toml  regulation_data.csv  requirements-dev.txt  requirements.txt  scores.csv  style.css  tsconfig.json  vite.config.js
.github/: dependabot.yml
.github/workflows/: ci.yml  evidence-sync.yml  update-data.yml
PLANS/: 01-country-comparison.md  02-data-export.md  03-fulltext-search.md  04-changelog-view.md  05-bloc-aggregation.md  06-scatter-plot.md  07-kaggle-integration.md  08-embeddable-widget.md  README.md
docs/plans/: 2026-02-22-ui-ux-redesign-design.md  2026-04-17-citability-and-resilience.md  2026-04-17-polish-and-onramp-spec.md  2026-04-17-polish-and-onramp.md  2026-04-22-mobile-and-migration.md  2026-07-supabase-evidence-and-ux.md
public/: data.html  history.json  methodology.html  regulation_data.csv  scores.csv
public/data/: blocs.json  country_iso.json  country_names.json  subscores.json
scripts/: update_data.py
scripts/regulation_pipeline/: README.md  __init__.py  __main__.py  api.py  batch.py  cli.py  config.py  (+13 more)
src/: ARCHITECTURE.md  constants.js  constants.ts  dom.ts  main.js  main.ts
tests/: blocs.test.js  changelog.test.js  citation.test.js  history.test.js  hydrate.test.js  jitter.test.js  loader.test.js  normalize.test.js  scatterStats.test.js  searchIndex.test.js  selectors.test.js  sources.test.js  store-emit.test.js  store.test.js  url.test.js
(+148 files in other folders)
